--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,18 @@ body{
     padding: 15px;
 }
 header{
+    margin-top: 1%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+.menu{
+    width: 35%;
+}
+.menu a{
+   text-decoration: none;
+   margin: 1%;
 }
 .title{
     font-family: 'poppinsregular';
@@ -52,7 +60,7 @@ span{
     margin-top: 10%;
 }
 h2{
-    line-height: 0.5;
+    line-height: 0.8;
     font-size: 40px;
 
 }
@@ -93,6 +101,7 @@ button:hover{
     color: white;
     scale: 1.1;
 }
+
 
 
 
